# AZURE-RUST-FUNCTIONS-V4

./: .gitignore  Cargo.toml
HttpId/: function.json
HttpTodos/: function.json
src/: handler.rs  main.rs  model.rs
