[package]
name = "handler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pretty_env_logger = "0.5.0"
uuid = { version = "1.9.1", features = ["v4"] }
warp = "0.3.7"
tokio = { version = "1.38.0", features = ["rt", "macros", "rt-multi-thread"] }
serde = { version = "1.0.203",features = ["derive"] }
reqwest = {version = "0.12.5", features = ["json"] }
log = { version = "0.4.22", features = [] }
futures = "0.3.30"
chrono = { version = "0.4.38", features = ["serde"] }
